docs: add getting started

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,14 +1,10 @@
 ---
 title: Introduction
-description: Aliquip pariatur officia cupidatat aliqua et veniam occaecat voluptate commodo mollit fugiat nulla magna et commodo.
+description: Build dynamic documentation with easy—customizable components and designs you can effortlessly integrate into your Next.js apps.
 ---
 
-Culpa anim eu excepteur est commodo ut culpa est ea Lorem nisi. Mollit ipsum ullamco fugiat ut cupidatat est fugiat.
+Docsframe is one of the easiest ways to quickly build project documentation without the hassle of starting from scratch.
 
-**Ad non ad Lorem exercitation reprehenderit magna?**
+Built with TypeScript and Next.js, it provides customizable, responsive components tailored for beautiful documentation. Customizable. Open Source.
 
-Do consequat incididunt sunt duis adipisicing cupidatat in laborum aliqua aliquip mollit. Elit eiusmod incididunt incididunt proident consectetur anim fugiat cupidatat labore.
-
-## Laborum
-
-Id consectetur laborum magna enim in https://docsframe.work enim https://chosera.com.
+This library is heavily inspired by [https://magicui.design/](https://magicui.design/) documentation.
