docs: update Introduction

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -33,7 +33,7 @@ npx docsframe@latest init
 
 ### That's it
 
-You are now ready to start customizing your Docsframe.
+You are now ready to customize Docsframe and start building your documentation.
 
 </Steps>
 
