--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -4,7 +4,16 @@ description: Build dynamic documentation with easy—customizable components and
 ---
 
 Docsframe is one of the easiest ways to quickly build project documentation without the hassle of starting from scratch.
-
 Built with TypeScript and Next.js, it provides customizable, responsive components tailored for beautiful documentation. Customizable. Open Source.
 
-This library is heavily inspired by [https://magicui.design/](https://magicui.design/) documentation.
+This is **NOT** a component library. It's a collection of re-usable components that you can copy and paste into your apps.
+
+**What do you mean by not a component library?**
+
+I mean you do not install it as a dependency. It is not available or distributed via npm.
+
+Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
+
+_Use this as a reference to build your own component libraries._
+
+This library is heavily inspired by [https://magicui.design/](https://magicui.design/) and [https://ui.shadcn.com/](https://ui.shadcn.com/) documentation.
