feat(package): update add command

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,6 +3,12 @@ title: Introduction
 description: Build dynamic documentation with easy—customizable components and designs you can effortlessly integrate into your Next.js apps.
 ---
 
+<Callout>
+
+**Note:** This is also an instance of Docsframe.
+
+</Callout>
+
 Docsframe is one of the easiest ways to quickly build project documentation without the hassle of starting from scratch.
 Built with TypeScript and Next.js, it provides customizable, responsive components tailored for beautiful documentation. Customizable. Open Source.
 
