--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -20,6 +20,6 @@ I mean you do not install it as a dependency. It is not available or distributed
 
 Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
 
-_Use this as a reference to build your own component libraries._
+_Use this as a reference to build your own components and documentation._
 
 This library is heavily inspired by [https://magicui.design/](https://magicui.design/) and [https://ui.shadcn.com/](https://ui.shadcn.com/) documentation.
