docs: add options to getting started

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -44,3 +44,19 @@ Use the `add` command to add components to your project.
 ```bash
 npx docsframe@latest add [component]
 ```
+
+### Options
+
+```txt
+Usage: docsframe add [options] [components...]
+
+add docsframe components to your documentation
+
+Arguments:
+  components                     the components to add
+
+Options:
+  -o, --overwrite                overwrite existing files
+  -c, --cwd [cwd]                the working directory. defaults to the current directory.
+  --skip-deps                    skip dependency installation
+```
