docs: fix readme

--- a/content/docs/components/callout.mdx
+++ b/content/docs/components/callout.mdx
@@ -2,3 +2,9 @@
 title: Callout
 description: A callout component to highlight important information.
 ---
+
+## Installation
+
+```bash
+npx docsframe@latest add callout
+```
