--- a/content/docs/components/callout.mdx
+++ b/content/docs/components/callout.mdx
@@ -3,8 +3,38 @@ title: Callout
 description: A callout component to highlight important information.
 ---
 
+<Tabs defaultValue="preview">
+  <TabsList>
+    <TabsTrigger value="preview">Preview</TabsTrigger>
+    <TabsTrigger value="code">Code</TabsTrigger>
+  </TabsList>
+  <TabsContent value="preview">
+    <ComponentPreview>
+      <Callout>
+        **Lorem:** ipsum dolor sit amet consectetur adipiscing elit.
+      </Callout>
+    </ComponentPreview>
+  </TabsContent>
+  <TabsContent value="code">
+    ```bash
+    <Callout>
+      **Lorem:** ipsum dolor sit amet consectetur adipiscing elit.
+    </Callout>
+    ```
+  </TabsContent>
+</Tabs>
+
 ## Installation
 
-```bash
-npx docsframe@latest add callout
-```
+<Tabs defaultValue="cli">
+  <TabsList>
+    <TabsTrigger value="cli">CLI</TabsTrigger>
+    <TabsTrigger value="manual">Manual</TabsTrigger>
+  </TabsList>
+  <TabsContent value="cli">
+    ```bash
+    npx docsframe@latest add callout
+    ```
+  </TabsContent>
+  <TabsContent value="manual"></TabsContent>
+</Tabs>
