docs: update callout docs

--- a/content/docs/components/callout.mdx
+++ b/content/docs/components/callout.mdx
@@ -16,7 +16,7 @@ description: A callout component to highlight important information.
     </ComponentPreview>
   </TabsContent>
   <TabsContent value="code">
-    ```bash
+    ```tsx
     <Callout>
       **Lorem:** ipsum dolor sit amet consectetur adipiscing elit.
     </Callout>
