--- a/content/docs/components/component-preview.mdx
+++ b/content/docs/components/component-preview.mdx
@@ -40,5 +40,63 @@ description: A component preview to display your components in a rendered previe
     npx docsframe@latest add component-preview
     ```
   </TabsContent>
-  <TabsContent value="manual"></TabsContent>
+  <TabsContent value="manual">
+    <Steps>
+      <Step>Copy and paste the following code into your projects components/docsframe folder.</Step>
+      <CodeCollapsible>
+        ```tsx
+        "use client";
+
+        import React from "react";
+        import { cn } from "@/lib/utils";
+
+        type ComponentPreviewProps = {
+          children?: React.ReactNode;
+          className?: string;
+        };
+
+        export function ComponentPreview({
+          children,
+          className,
+        }: ComponentPreviewProps) {
+          return (
+            <div
+              className={cn(
+                "relative my-4 flex flex-col space-y-2 lg:max-w-[120ch]",
+                className
+              )}
+            >
+              <div
+                className={cn(
+                  "max-w-screen relative flex flex-col items-center justify-center rounded-xl bg-background p-0 md:border md:p-16",
+                  className
+                )}
+              >
+                <React.Suspense
+                  fallback={
+                    <div className="flex items-center text-sm text-muted-foreground">
+                      Loading...
+                    </div>
+                  }
+                >
+                  {children}
+                </React.Suspense>
+              </div>
+            </div>
+          );
+        }
+        ```
+      </CodeCollapsible>
+      <Step>Update the imports in the mdx-components.tsx file in the components/docsframe folder.</Step>
+      ```tsx
+      import { ComponentPreview } from "@/components/docsframe/component-preview";
+      // ... existing imports ...
+
+      const components = {
+        // ... existing components ...
+        ComponentPreview,
+      };
+      ```
+    </Steps>
+  </TabsContent>
 </Tabs>
