refactor(package): improve component file path handling
- Simplify destination path logic for component files
- Update MDX components file path resolution

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -57,6 +57,6 @@ Arguments:
 
 Options:
   -o, --overwrite                overwrite existing files
-  -c, --cwd [cwd]                the working directory. defaults to the current directory.
+  -c, --cwd [cwd]                the working directory. defaults to the standard docsframe directory.
   --skip-deps                    skip dependency installation
 ```
