feat: enhance ui and documentation

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -34,6 +34,8 @@ npx docsframe@latest init
 ### That's it
 
 You are now ready to customize Docsframe and start building your documentation.
+For more information on configuring new documentation pages, please refer to the [docsframe.json](/docs/docsframe-json).
+
 
 </Steps>
 
