feat: update documentation descriptions

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Build dynamic documentation with easy—customizable components and designs you can effortlessly integrate into your Next.js apps.
+description: Build dynamic documentation with ease—customizable components and designs seamlessly integrated into your Next.js apps.
 ---
 
 <Callout>
@@ -12,14 +12,14 @@ description: Build dynamic documentation with easy—customizable components and
 Docsframe is one of the easiest ways to quickly build project documentation without the hassle of starting from scratch.
 Built with TypeScript and Next.js, it provides customizable, responsive components tailored for beautiful documentation. Customizable. Open Source.
 
-This is **NOT** a component library. It's a collection of re-usable components that you can copy and paste into your apps.
+This is **NOT** just a collection of individual components or a traditional component library. Docsframe is a framework that integrates seamlessly into your Next.js app.
 
-**What do you mean by not a component library?**
+**Why is Docsframe more than a component library?**
 
-I mean you do not install it as a dependency. It is not available or distributed via npm.
+Docsframe is designed to integrate seamlessly with your app. By running the CLI, it sets up a ready-to-use documentation system with content collections and customizable components.
 
-Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
+No need to build from scratch — it provides the structure and reusable elements you need while keeping the flexibility to make it your own.
 
-_Use this as a reference to build your own components and documentation._
+*Use Docsframe as a helper to implement, organize, and customize your documentation.*
 
-This library is heavily inspired by [https://magicui.design/](https://magicui.design/) and [https://ui.shadcn.com/](https://ui.shadcn.com/) documentation.
+This solution is heavily inspired by [https://magicui.design/](https://magicui.design/) documentation. s/o
