fix: update layout and styling

--- a/content/docs/docsframe-json.mdx
+++ b/content/docs/docsframe-json.mdx
@@ -35,12 +35,42 @@ The `docsConfig` section is used to configure all your documentation pages.
           {
             "title": "docsframe.json",
             "href": "/docs/docsframe-json"
+          },
+          {
+            "title": "MDX",
+            "href": "/docs/mdx-syntax"
+          }
+        ]
+      },
+      {
+        "title": "Components",
+        "items": [
+          {
+            "title": "shadcn/ui",
+            "href": "/docs/components/shadcn"
+          },
+          {
+            "title": "Callout",
+            "href": "/docs/components/callout"
+          },
+          {
+            "title": "Tabs",
+            "href": "/docs/components/tabs"
+          },
+          {
+            "title": "Component Preview",
+            "href": "/docs/components/component-preview"
+          },
+          {
+            "title": "Code Collapsible",
+            "href": "/docs/components/code-collapsible"
           }
         ]
       }
     ]
   }
 }
+
 ```
 
 ## contribution
